feat:introduce explicit download permission "DownloadContent"